ansible/roles/app/files/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns
  labels:
    app: dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns
  template:
    metadata:
      labels:
        app: dns
    spec:
      containers:
      - name: dns
        image: docker.io/docker pull psitrax/powerdns:latest      
        ports:
        - containerPort: 53
